--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,8 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss"
+          "style": "scss",
+		  "skipTests": true
         },
         "@schematics/angular:application": {
           "strict": true
@@ -33,11 +34,11 @@
             "styles": [
 				"src/styles.scss",
 				"src/assets/css/bootstrap-5.1.3-dist/css/bootstrap.min.css",
-				"src/assets/ico/fontawesome-free-6.0.0-web/css/all.css",
+				"src/assets/ico/fontawesome-free-6.0.0-web/css/all.css"
             ],
             "scripts": [
 				"src/assets/css/bootstrap-5.1.3-dist/js/bootstrap.min.js",
-				"src/assets/js/jquery-3.6.0.min.js",
+				"src/assets/js/jquery-3.6.0.min.js"
 
 			]
           },
